--- a/data.html
+++ b/data.html
@@ -14,7 +14,7 @@
  </head>
 
  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="index.html">Latitude</a>
+  <a class="navbar-brand text-white px-4 rounded" href="index.html">Latitude</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -42,9 +42,9 @@
 </nav>
 
  <body>
-  <div class="container pt-5">
+  <div class="container pt-3">
    <div class="table-responsive bg-light">
-    <h3>Data</h3>
+    <h2>Data</h2>
     <h6>The following table displays the complete data set used for all plots in this project. Click "Load Data" to view. </h6>
     <br />
     <div align="center">
