--- a/humidity2.html
+++ b/humidity2.html
@@ -49,7 +49,7 @@
                 <div class="col-sm-4">
                   <img class="img-responsive"> <img src="Resources/assets/images/Fig2.png" width="300%"> 
                 </div>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
+                <p>This plot investigates latitude compared to humidity.  Latitude is displayed along the x-axis and humidity is displayed along the y-axis. This data suggests the closer a city is to the equator the less likely they are to have low humidity. It can be concluded that cities with the highest humidity are close to the equator.
                 </p>
             </div>
             
