--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="temp1.html">Max Temperature</a>
                 <a class="dropdown-item" href="humidity2.html">Humidity</a>
-                <a class="dropdown-item" href="cloudiness3.html">Cloudiness</a>
+                <a class="dropdown-item" href="cloudiness3.html">Cloudiness</a> 
                 <a class="dropdown-item" href="windspeed4.html">Wind Speed</a>
               </div>
             </li>
@@ -47,11 +47,11 @@
             <div class="col-sm-7 bg-white">
               <h2>Summary: Latitude vs. X</h2>
                 <div class="col-sm-7">
-                  <img class="img-responsive pull-left"> <img src="Resources/assets/images/Fig1.png" width="100%"> 
+                  <img class="img-responsive pull-left"> <img src="Resources/assets/images/Fig1.png" width="90%"> 
                 </div>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
+                <p>A number of variables contribute to the climate of a city. The latitude of a city is likely to impact the city’s weather. For example, different latitudes receive different amounts of solar radiation. Latitudes closer to the equator receive the highest amounts of solar radiation. It may be obvious that high amounts of solar radiation result in increased temperatures.  However, what other aspects of weather are affected by solar radiation or the location of the city’s latitude?
                 </p>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
+                <p>The purpose of this project is to investigate how different aspects of a city’s weather are related to the degree of latitude.  This project examines weather data for cities all over the globe of varying degrees of latitude. Weather factors included temperature, humidity, cloudiness and wind speed. On the site you will find multiple scatterplots comparing weather factors to latitude as well as a table of all of the data used.
                 </p>
             </div>
 
