--- a/cloudiness3.html
+++ b/cloudiness3.html
@@ -46,10 +46,11 @@
           <div class="row">
             <div class="col-sm-7 bg-white">
               <h2>Cloudiness</h2>
+              
                 <div class="col-sm-4">
                   <img class="img-responsive"> <img src="Resources/assets/images/Fig3.png" width="300%"> 
                 </div>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
+                <p>This plot compares latitude and cloudiness. Latitude is displayed along the x-axis and cloudiness is displayed along the y-axis. Photographs of earth from space show clouds covering much of the earth.  The current data suggests there is no correlation between latitude and cloudiness. Therefore, the degree of cloudiness can not be predicted based on location.
                 </p>
             </div>
             
