--- a/temp1.html
+++ b/temp1.html
@@ -49,7 +49,9 @@
                 <div class="col-sm-4">
                   <img class="img-responsive"> <img src="Resources/assets/images/Fig1.png" width="300%"> 
                 </div>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
+                <p>Without looking at data, one might easily hypothesize that the closer a location is to the equator, the hotter the maximum temperature is likely to be.  This plot investigates that hypothesis by comparing latitude and maximum temperature. Latitude is displayed along the x-axis and maximum temperature is displayed along the y-axis. This data confirms the hypothesis by suggesting there is a correlation between latitude and maximum temperature.  It is observed that the warmest temperatures are found near the equator (0 degree latitude) 
+                  and continue to decrease as you move away from the equator (increasing latitude) in either direction.
+                  
                 </p>
             </div>
             
