--- a/windspeed4.html
+++ b/windspeed4.html
@@ -45,11 +45,11 @@
           <!--Normally these medium columns go full wide on small screen sizes-->
           <div class="row">
             <div class="col-sm-7 bg-white">
-              <h2>Windspeed</h2>
+              <h2>Wind Speed</h2>
                 <div class="col-sm-4">
                   <img class="img-responsive"> <img src="Resources/assets/images/Fig4.png" width="300%"> 
                 </div>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
+                <p>The scatter plot displayed above compares latitude to wind speed.  Latitude is displayed along the x-axis and wind speed is displayed along the y-axis. This data suggests there is little correlation between wind speed and latitude.  However, wind speed may increase in locations higher than 40 degrees latitude. 
                 </p>
             </div>
             
