--- a/data.html
+++ b/data.html
@@ -63,7 +63,7 @@
 $(document).ready(function(){
  $('#load_data').click(function(){
   $.ajax({
-   url:"https://github.com/kwelter23/Web-Design-Challenge/blob/master/Resources/cities.csv",
+   url:"Resources/cities.csv",
    dataType:"text",
    success:function(data)
    {
