fixed data drop down

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <div class="container pt-3">
           <!--Normally these medium columns go full wide on small screen sizes-->
           <div class="row">
-            <div class="col-sm-7 bg-white">
+            <div class="col-md-7 bg-white">
               <h2>Summary: Latitude vs. X</h2>
-                <div class="col-sm-7">
+                <div class="col-md-7">
                   <img class="img-responsive pull-left"> <img src="Resources/assets/images/Fig1.png" width="90%"> 
                 </div>
                 <p>A number of variables contribute to the climate of a city. The latitude of a city is likely to impact the city’s weather. For example, different latitudes receive different amounts of solar radiation. Latitudes closer to the equator receive the highest amounts of solar radiation. It may be obvious that high amounts of solar radiation result in increased temperatures.  However, what other aspects of weather are affected by solar radiation or the location of the city’s latitude?
@@ -62,19 +62,19 @@
             <div class="col-sm-4 bg-white pull-left">
               <h4>Visualizations</h4>
                 <div class="row no-gutters">
-                  <div class="col-sm-6">
+                  <div class="col-md-6">
                     <img class="img-responsive"> <a href="Resources/assets/images/Fig1.png"><img src="Resources/assets/images/Fig1.png" width="100%" onClick="Resources/assets/images/Fig1.png"/></a>
                   </div>
-                  <div class="col-sm-6">
+                  <div class="col-md-6">
                     <img class="img-responsive"> <a href="Resources/assets/images/Fig2.png"><img src="Resources/assets/images/Fig2.png" width="100%" onClick="Resources/assets/images/Fig2.png"/></a>
                   </div>
                 </div>
 
                 <div class="row no-gutters">
-                  <div class="col-sm-6">
+                  <div class="col-md-6">
                     <img class="img-responsive"> <a href="Resources/assets/images/Fig3.png"><img src="Resources/assets/images/Fig3.png" width="100%" onClick="Resources/assets/images/Fig1.png"/></a>
                   </div>
-                  <div class="col-sm-6">
+                  <div class="col-md-6">
                     <img class="img-responsive"> <a href="Resources/assets/images/Fig4.png"><img src="Resources/assets/images/Fig4.png" width="100%" onClick="Resources/assets/images/Fig2.png"/></a>
                   </div>
                 </div>
