--- a/data.html
+++ b/data.html
@@ -44,8 +44,8 @@
 </nav>
 
  <body>
-  <div class="container pt-3">
-   <div class="table-responsive bg-light">
+  <div class="container  pt-3">
+   <div class="table-responsive rounded bg-light">
     <h2>Data</h2>
     <h6>The following table displays the complete data set used for all plots in this project. Click "Load Data" to view. </h6>
     <br />
