--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="container pt-3">
           <!--Normally these medium columns go full wide on small screen sizes-->
           <div class="row">
-            <div class="col-md-7 bg-white">
+            <div class="col-md-7 rounded bg-white">
               <h2>Summary: Latitude vs. X</h2>
                 <div class="col-md-7">
                   <img class="img-responsive pull-left"> <img src="Resources/assets/images/Fig1.png" width="90%"> 
@@ -59,7 +59,7 @@
                             
           </div>
           
-            <div class="col-sm-4 bg-white pull-left">
+            <div class="col-sm-4 bg-white pull-left rounded ">
               <h4>Visualizations</h4>
                 <div class="row no-gutters">
                   <div class="col-md-6">
