--- a/comparison.html
+++ b/comparison.html
@@ -46,7 +46,7 @@
           <div class="row">
                      
     
-            <div class="col-md-12 right align-items-center bg-white">
+            <div class="col-md-12  rounded right align-items-center bg-white">
               <h2>Comparison: Latitude vs. X</h2>
               <div class="row no-gutters">
                 <div class="col-sm-6">
