--- a/humidity2.html
+++ b/humidity2.html
@@ -44,7 +44,7 @@
         <div class="container pt-3">
           <!--Normally these medium columns go full wide on small screen sizes-->
           <div class="row">
-            <div class="col-sm-7 bg-white">
+            <div class="col-sm-7 rounded  bg-white">
               <h2>Humidity</h2>
                 <div class="col-sm-4">
                   <img class="img-responsive"> <img src="Resources/assets/images/Fig2.png" width="300%"> 
@@ -59,7 +59,7 @@
 
           
     
-            <div class="col-sm-4 bg-white">
+            <div class="col-sm-4 rounded  bg-white">
               <h4>Visualizations</h4>
                 <div class="row no-gutters">
                   <div class="col-sm-6">
